kube/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
      - args:
        - gunicorn
        - -w
        - "4"
        - -b
        - 0.0.0.0:8000
        - geoapi.app:app
        - --reload
        image: api
        name: geoapi
        ports:
        - containerPort: 8000
        resources: {}
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /api
          name: api-claim0
        - mountPath: /assets
          name: assets
      hostname: geoapi
      restartPolicy: Always
      volumes:
      - name: api-claim0
        persistentVolumeClaim:
          claimName: api-claim0
      - name: assets
        persistentVolumeClaim:
          claimName: assets
status: {}
