kube/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /assets
          name: assets
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-claim1
      restartPolicy: Always
      volumes:
      - name: assets
        persistentVolumeClaim:
          claimName: assets
      - name: nginx-claim1
        persistentVolumeClaim:
          claimName: nginx-claim1
status: {}
