kube/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: geoapi_postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: dev
        - name: POSTGRES_PASSWORD
          value: dev
        - name: POSTGRES_USER
          value: dev
        image: mdillon/postgis
        name: geoapi_postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      hostname: geoapi_postgres
      restartPolicy: Always
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata
status: {}
