kube/geoapi.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  labels:
    app: geoapi
  name: geoapi
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: geoapi
