kube/nfsshare.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nfsshare
spec:
  clusterIP: 10.102.247.244 
  ports:
  - name: nfs
    port: 2049
    protocol: TCP
    targetPort: 2049
  selector:
    app: nfsshare
  sessionAffinity: None
  type: ClusterIP
