kube/nfsshare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfsshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfsshare
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nfsshare
    spec:
      containers:
      - env:
        - name: SHARED_DIRECTORY
          value: /nfsshare
        image: itsthenetwork/nfs-server-alpine:latest
        imagePullPolicy: Always
        name: nfsshare
        ports:
        - containerPort: 2049
          name: nfs
          protocol: TCP
        resources: {}
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /nfsshare
          name: nfs-data
      restartPolicy: Always
      volumes:
      - name: nfs-data
        persistentVolumeClaim:
          claimName: nfs-vol01
---
apiVersion: v1
kind: Service
metadata:
  name: nfsshare
spec:
  clusterIP: 10.102.247.244 
  ports:
  - name: nfs
    port: 2049
    protocol: TCP
    targetPort: 2049
  selector:
    app: nfsshare
  sessionAffinity: None
  type: ClusterIP
