kube/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
