kube/nginx.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  labels:
    app: geoapi-nginx
  name: geoapi-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: ${NODEPORT}
  selector:
    app: geoapi-nginx
