kube/rabbitmq.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  labels:
    app: geoapi-rabbitmq
  name: geoapi-rabbitmq
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: geoapi-rabbitmq
